tests/sksl/errors/OpaqueTypeInInterfaceBlock.glsl
### Compilation failed:

error: 1: variables of type 'sampler' must be global
error: 1: opaque type 'sampler' is not permitted in an interface block
2 errors
